Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5053

[C++ broker] Exclusive autodelete queues created with AMQP 1.0 don't seem to be autodeleted

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.24
    • C++ Broker
    • None
    • CentOS 6.4, Qpidd 0.24 RC1, Proton 0.4

    Description

      I'm using a qpid.messaging client with AMQP 1.0 to create a temporary / auto-delete queue on the broker. This queue should get deleted after the connection is closed. However, it seems that if the queue is exclusive, it is never autodeleted. To create the queue, I'm using following address:

      myresponse_queue_1;
      {
      create: always,
      assert: never,
      node:
      {
      durable: false,
      properties:

      { auto-delete: true, exclusive: true, 'qpid.max_count': 1000, 'qpid.max_size': 1000000, 'qpid.policy_type': ring }

      }
      }

      According to qpid-tool, the auto-delete option is properly recognized:

      Object of type: org.apache.qpid.broker:queue:_data(aee19387-3611-855a-c8ff-d2f106e5b5f4)
      Attribute 160
      ===========================================================================================================
      vhostRef 170
      name response.ABCFR_ABCFRALMMACC1.response_queue_1
      durable False
      autoDelete True
      exclusive True
      arguments

      {u'qpid.max_size': '1000000', u'qpid.max_count': '999', u'qpid.policy_type': 'ring'}

      msgTotalEnqueues 0
      msgTotalDequeues 0
      msgTxnEnqueues 0
      msgTxnDequeues 0
      msgPersistEnqueues 0
      msgPersistDequeues 0
      msgDepth 0
      byteDepth 0
      byteTotalEnqueues 0
      byteTotalDequeues 0
      byteTxnEnqueues 0
      byteTxnDequeues 0
      bytePersistEnqueues 0
      bytePersistDequeues 0
      msgFtdEnqueues 0
      msgFtdDequeues 0
      byteFtdEnqueues 0
      byteFtdDequeues 0
      msgFtdDepth 0
      byteFtdDepth 0
      releases 0
      acquires 0
      discardsTtl 0
      discardsRing 0
      discardsLvq 0
      discardsOverflow 0
      discardsSubscriber 0
      discardsPurge 0
      reroutes 0
      consumerCount 1
      consumerCountHigh 1
      consumerCountLow 1
      bindingCount 1
      bindingCountHigh 1
      bindingCountLow 1
      unackedMessages 0
      unackedMessagesHigh 0
      unackedMessagesLow 0
      messageLatencyMin 0s
      messageLatencyMax 0s
      flowStopped False
      flowStoppedCount 0
      redirectPeer
      redirectSource False

      But the queue is never deleted. With qpid.messaging and AMQP 0.10, or with qpid.messaging, AMQP 1.0 and non-exclusive queue, the auto deletion seems to work fine.

      Please let me know if you need some additional logs or information.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            gsim Gordon Sim
            scholzj Jakub Scholz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment