QPID-5053: release exclusive queue ownership when session ends (clear the set _after_ iterating over it!)

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1512283 13f79535-47bb-0310-9956-ffa450edef68